update for rerunning

--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+G<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head th:replace="_fragments :: head(~{::title},${blog.description})">
   <meta charset="UTF-8">
