solve for new version and several issues. issues:lazy loading in hibernate, data base table reset,etc..

--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head th:replace="_fragments :: head(~{::title},汪凯飞的个人博客，学习，分享，交流)">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="_fragments :: head(~{::title},彭刘羿的个人博客,学习,分享,交流)">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>标签</title>
