--- a/src/main/resources/templates/admin/blogs-input.html
+++ b/src/main/resources/templates/admin/blogs-input.html
@@ -120,18 +120,18 @@
               <label for="recommend">推荐</label>
             </div>
           </div>
-          <div class="field">
-            <div class="ui checkbox">
-              <input type="checkbox" id="shareStatement" name="shareStatement" th:checked="*{shareStatement}" class="hidden">
-              <label for="shareStatement">转载声明</label>
-            </div>
-          </div>
-          <div class="field">
-            <div class="ui checkbox">
-              <input type="checkbox" id="appreciation" name="appreciation" th:checked="*{appreciation}" class="hidden">
-              <label for="appreciation">赞赏</label>
-            </div>
-          </div>
+<!--          <div class="field">-->
+<!--            <div class="ui checkbox">-->
+<!--              <input type="checkbox" id="shareStatement" name="shareStatement" th:checked="*{shareStatement}" class="hidden">-->
+<!--              <label for="shareStatement">转载声明</label>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="field">-->
+<!--            <div class="ui checkbox">-->
+<!--              <input type="checkbox" id="appreciation" name="appreciation" th:checked="*{appreciation}" class="hidden">-->
+<!--              <label for="appreciation">赞赏</label>-->
+<!--            </div>-->
+<!--          </div>-->
           <div class="field">
             <div class="ui checkbox">
               <input type="checkbox" id="commentabled" name="commentabled" th:checked="*{commentabled}" class="hidden">
@@ -176,8 +176,8 @@
         <div class="three wide column">
           <h4 class="ui inverted header m-text-thin m-text-spaced ">联系我</h4>
           <div class="ui inverted link list">
-            <a href="#" class="item m-text-thin">Email：lirenmi@163.com</a>
-            <a href="#" class="item m-text-thin">QQ：865729312</a>
+            <a href="#" class="item m-text-thin">Email：liuyi.peng.ncu@outlook.com</a>
+            <a href="#" class="item m-text-thin">QQ：782527347</a>
           </div>
         </div>
         <div class="seven wide column">
