solve issues in html static

--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="_fragments :: head(~{::title},彭刘羿的个人博客,学习,分享,交流)">
+<head th:replace="_fragments :: head(~{::title}, 'Liuyi blog')">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>标签</title>
