--- a/src/main/resources/templates/types.html
+++ b/src/main/resources/templates/types.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head  th:replace="_fragments :: head(~{::title},汪凯飞的个人博客，学习，分享，交流)">  <meta charset="UTF-8">
+<head  th:replace="_fragments :: head(~{::title}, 'Liuyi blog')">  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>分类</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
