--- a/src/main/resources/templates/error/blog.html
+++ b/src/main/resources/templates/error/blog.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head th:replace="_fragments :: head(~{::title},${blog.description})">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:replace="~{_fragments :: head(~{::title},${blog.description})}">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title th:text="${blog.title}">博客详情</title>
@@ -14,7 +14,7 @@
 <body>
 
   <!--导航-->
-  <nav th:replace="_fragments :: menu(1)"  class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
+  <nav th:replace="~{_fragments :: menu(1)}"  class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
 
   </nav>
 
