--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="_fragments :: head(~{::title},我们的论坛)">
+<head th:replace="~{_fragments :: head(~{::title},我们的论坛)}">
     <meta charset="UTF-8">
     <meta name="description" content="我们的论坛">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,7 @@
 <body>
 
 <!--导航-->
-<nav th:replace="_fragments :: menu(1)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
+<nav th:replace="~{_fragments :: menu(1)}" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
 </nav>
 
 <!--中间内容-->
@@ -161,7 +161,7 @@
 <br>
 <br>
 <!--底部footer-->
-<footer th:replace="_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
+<footer th:replace="~{_fragments :: footer}" class="ui inverted vertical segment m-padded-tb-massive">
     <div class="ui center aligned container">
         <div class="ui inverted divided stackable grid">
             <div class="three wide column">
