--- a/src/main/resources/templates/types.html
+++ b/src/main/resources/templates/types.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head  th:replace="_fragments :: head(~{::title}, 'Liuyi blog')">  <meta charset="UTF-8">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head  th:replace="~{_fragments :: head(~{::title}, 'Liuyi blog')}">  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>分类</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
@@ -9,7 +9,7 @@
 <body>
 
   <!--导航-->
-  <nav  th:replace="_fragments :: menu(2)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
+  <nav  th:replace="~{_fragments :: menu(2)}" class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
     <div class="ui container">
       <div class="ui inverted secondary stackable menu">
         <h2 class="ui teal header item">Blog</h2>
@@ -108,7 +108,7 @@
   <br>
   <br>
   <!--底部footer-->
-  <footer  th:replace="_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
+  <footer  th:replace="~{_fragments :: footer}" class="ui inverted vertical segment m-padded-tb-massive">
     <div class="ui center aligned container">
       <div class="ui inverted divided stackable grid">
         <div class="three wide column">
